--- a/WITDemoDay/templates/questions.html
+++ b/WITDemoDay/templates/questions.html
@@ -23,7 +23,7 @@
 	<input type="radio" name="level" value="strongly agree"> strongly agree
 </form>
 <div id="submit" onclick="window.location.href='#'" class="buttonStyle" style="margin-top:20px; margin-left:auto; margin-right:auto;">Submit</div>
-<div id="submit" onclick="window.location.href='/tutorial'" class="buttonStyle" style="margin-top:20px; margin-left:auto; margin-right:auto; width=500px;">View Tutorial</div>
+<div id="submit" onclick="window.location.href='/tutorial'" class="buttonStyle" style="margin-top:20px; margin-left:auto; margin-right:auto; width=500px;">Tutorial</div>
 </div>
 
 </body>
